修正menu读写